[gd_scene load_steps=5 format=3 uid="uid://bcudmwm5734ui"]

[ext_resource type="Theme" uid="uid://duv45flj7i4ka" path="res://themes_fonts/gui_theme.tres" id="1_80edf"]
[ext_resource type="Script" path="res://gui.gd" id="1_cor1f"]
[ext_resource type="Texture2D" uid="uid://btw8yjeiw4a3" path="res://assets/species_pictures/spec_0.jpg" id="2_6lon5"]
[ext_resource type="LabelSettings" uid="uid://cknsth6gxm321" path="res://themes_fonts/label_body_text.tres" id="3_q8o8l"]

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_cor1f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("1_80edf")
text = "Year 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="open menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_80edf")
theme_override_font_sizes/font_size = 25
text = "Species Log"

[node name="species_log_hbox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBoxContainer/species_log_hbox"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_80edf")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/species_log_hbox/Panel"]
layout_mode = 2

[node name="left button" type="Button" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
text = "<-"

[node name="species info" type="ScrollContainer" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer/species info"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Species Common Name" type="Label" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer/species info/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "SHOULD NOT SEE THIS"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer/species info/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="species photo" type="TextureRect" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer/species info/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_6lon5")
expand_mode = 4
stretch_mode = 5

[node name="species latin name" type="Label" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer/species info/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_80edf")
theme_override_font_sizes/font_size = 16
text = "name name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="species flavortext" type="Label" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer/species info/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_80edf")
theme_override_font_sizes/font_size = 16
text = "body text body text body yadadadadad flabor stuff world building did you know that cashews come from a fruit?"
label_settings = ExtResource("3_q8o8l")
autowrap_mode = 3

[node name="right button" type="Button" parent="VBoxContainer/species_log_hbox/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
mouse_filter = 1
text = "->"

[connection signal="pressed" from="VBoxContainer/open menu" to="." method="_on_open_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/species_log_hbox/Panel/HBoxContainer/left button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="VBoxContainer/species_log_hbox/Panel/HBoxContainer/right button" to="." method="_on_right_button_pressed"]
